cabal-version:      2.4
name:               Forward-Reverse
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Forward or Reverse-Mode Automatic Differentiation: What's the Difference?

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Birthe van den Berg
maintainer:         birthe.vandenberg@kuleuven.be

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

library
    exposed-modules:
      Abstract,
      Expressions,
      Forward,
      Overloading,
      Reverse,
      Sharing,
      Streams,
      Symbolic
    build-depends:
      base ^>=4.14.1.0,
      array ^>= 0.5.4.0,
      containers ^>= 0.6.2.1,
      mtl ^>= 2.2.2
    default-language: Haskell2010
